--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
     <div class="container">
 
-    
-    <br>
+
+        <br>
 
         <!-- Jumbotron -->
         <div class="jumbotron" id="title">
@@ -58,49 +58,44 @@
                                 <input class="form-control" id="slack-input" type="number">
                             </div>
 
+                            <div class="form-group row">
+                                <label for="search-input">Search Input:</label>
+                                <input class="form-control" id="search-input" type="text">
+                            </div>
                             <button class="btn btn-primary" id="search-data" type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
-                <div class="col-4">
-                    <table class="table table-bordered table-hover">
-                        <!-- thead-light does not appear to be working -->
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Trending Searches</th>
-
-
-                            </tr>
-                        </thead>
-
-                        <tbody id="search-data">
-                            <!-- Rows will go here. Eventually. -->
-                        </tbody>
-                    </table>
-                    <!-- End of Table -->
-
-                </div>
             </div>
+            <div class="col-6">
+                <table class="table table-bordered table-hover">
+                    <!-- thead-light does not appear to be working -->
+                    <thead class="thead-light text-center">
+                        <tr>
+                            <th scope="col">Trending Searches</th>
 
+                        </tr>
+                    </thead>
 
-            <div class="col-lg-6" "col-sm-12" style="margin-top: 10px;">
-                <div class="card card-default">
-                    <div class="card-body">
-                        <div class="form-group row">
-                            <label for="search-input">Search Input:</label>
-                            <input class="form-control" id="search-input" type="text">
-                        </div>
-                    </div>
-                </div>
+                    <tbody class="col-6" id="search-data">
+                        <!-- Rows will go here. Eventually. -->
+                    </tbody>
+                </table>
+                <!-- End of Table -->
+
             </div>
-
-
-
-
-
-
-
         </div>
+
+
+
+
+
+
+
+
+
+
+    </div>
 
     </div>
 
