--- a/index.html
+++ b/index.html
@@ -87,10 +87,47 @@
         </div>
 <!-- Need to Limit to 10 and fix frame
 Then pull simplified list to results div -->
-        <iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22 sourcelang:english sourcecountry:US&mode=Artlist&TIMELINESMOOTH&TIMESPAN=1d=5&Sort=DateDesc&Maxrecords=10&FORMAT=html" scrolling="yes" width=85% height=500 frameborder="5" class="respviz"></iframe>
-<!-- JSON FORMAT -->
-        <!-- https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22%20sourcelang:english%20sourcecountry:US&mode=ArtList&TimelineVolInfo&TIMELINESMOOTH&TIMESPAN=1440=5&FORMAT=JSON -->
 
+        <iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22 sourcelang:english sourcecountry:US&mode=Artlist&TIMELINESMOOTH&TIMESPAN=1d=5&Sort=DateDesc&Maxrecords=10&FORMAT=html" scrolling="yes" width=85% height=500 frameborder="5" class="respviz"></iframe>
+
+        <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
+
+        <!-- <script type="text/javascript">
+            // $("#myFrame").attr('src', 'http://www.google.com/');
+            $("#myFrame").attr('src', "https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22 sourcelang:english sourcecountry:US&mode=Artlist&TIMELINESMOOTH&TIMESPAN=1d=5&Sort=DateDesc&Maxrecords=10&FORMAT=html");
+        </script> -->
+
+
+        <!-- JSON FORMAT -->
+        <!-- https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22%20sourcelang:english%20sourcecountry:US&mode=ArtList&TimelineVolInfo&TIMELINESMOOTH&TIMESPAN=1440=5&FORMAT=JSON -->
+    
+        <!-- <div><a href="http://www.cssdrive.com" target="internal">CSS Drive</a></div> -->
+        <!-- <iframe src="http://www.bing.com" style="width: 90%; height: 300px" name="internal"></iframe> -->
+
+<script>
+// window.twttr = (function(d, s, id) {
+//     var js, fjs = d.getElementsByTagName(s)[0],
+//       t = window.twttr || {};
+//     if (d.getElementById(id)) return t;
+//     js = d.createElement(s);
+//     js.id = id;
+//     js.src = "https://platform.twitter.com/widgets.js";
+//     fjs.parentNode.insertBefore(js, fjs);
+  
+//     t._e = [];
+//     t.ready = function(f) {
+//       t._e.push(f);
+//     };
+
+// var twitterdm = "email-input"
+
+//     <a href="https://twitter.com/messages/compose?recipient_id=3805104374&text=Hello%20world"
+//   class="twitter-dm-button" data-screen-name="@davekubo">
+// Message @davekubo</a>
+</script>  
+
+    return t;
+  }(document, "script", "twitter-wjs"));</script>
         <div class="row">
             <div class="col-6">
                 <!-- Current Employees Table -->
