added twitter code

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
     
 
-        <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
-
 </head>
 
 <body>
@@ -82,6 +80,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 id="alert"></h3>
+<!-- TWITTER API -- get working from this JSON source -->
+<!-- GET https://api.twitter.com/1.1/trends/place.json?id=23424977 -->
+        <a class="twitter-timeline" data-width=100% data-height="900" data-theme="dark" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
                     </div>
                 </div>
             </div>
