added a bit for twitter

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <script src="assets/javascript/project.js"></script>
 
-    
 
-        <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
+
+    <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
 
 </head>
 
@@ -34,7 +34,8 @@
         <div class="callout large primary">
             <div class="row column text-center">
                 <h1>Global Events Tracker</h1>
-                <p class="lead">(description of what the app does here maybe) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
+                <p class="lead">(description of what the app does here maybe) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                    in dui mauris.</p>
             </div>
         </div>
 
@@ -84,35 +85,39 @@
                         <h3 id="alert"></h3>
                     </div>
                 </div>
+                <div id="twitter" class="large-6 medium-6 cell">
+                    Twitter results
+                </div>
             </div>
         </div>
 
         <div id="wrapper">
-                <div class="row">
-                    <div class="col">
-                        <!-- Current Employees Table -->
-                        <table class="table table-bordered table-hover">
-                          <!-- thead-light does not appear to be working -->
-       -                  <thead class="thead-light">
-       -                    <tr>
-       -                      <th scope="col">Trending Searches</th>
-       -                      
-       -                      
-       -                    </tr>
-       -                  </thead>
-                    <tbody id="trending">
-                        <!-- Rows will go here. Eventually. -->
-                    </tbody>
-                </table>
-                <!-- End of Table -->
-            </div>
-        </div>
+            <div class="row">
+                <div class="col">
+                    <!-- Current Employees Table -->
+                    <table class="table table-bordered table-hover">
+                        <!-- thead-light does not appear to be working -->
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Trending Searches</th>
 
+
+                            </tr>
+                        </thead>
+                        <tbody id="trending">
+                            <!-- Rows will go here. Eventually. -->
+                        </tbody>
+                    </table>
+                    <!-- End of Table -->
+                </div>
+            </div>
+
+        </div>
+        <div id="results">
+
+        </div>
     </div>
-    <div id="results">
-        
-    </div>
-</div> <!--end of wrapper-->
+    <!--end of wrapper-->
 
     <!-- <iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22 sourcelang:english sourcecountry:US&mode=Artlist&TIMELINESMOOTH&TIMESPAN=1d=5&Sort=DateDesc&Maxrecords=10&FORMAT=html" scrolling="yes" width=85% height=500 frameborder="5" class="respviz"></iframe> -->
 
