simple fix for GDELT css mucking up the page

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         <div id="results">
 
         </div>
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </div>
     <!--end of wrapper-->
 
