reddit updates - non-working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <script src="assets/javascript/project.js"></script>
 
 
-
     <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
 
 </head>
@@ -113,9 +112,13 @@
             </div>
 
         </div>
-        <div id="results">
 
-        </div>
+        <!-- <a class="twitter-timeline" href="https://twitter.com/TwitterDev/lists/national-parks?ref_src=twsrc%5Etfw">A Twitter List by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+
+        <div id="results"></div>
+
+        <div id="results-reddit"></div>
+
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -123,8 +126,6 @@
     <!--end of wrapper-->
 
     <!-- <iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=%22Trump%20President%22 sourcelang:english sourcecountry:US&mode=Artlist&TIMELINESMOOTH&TIMESPAN=1d=5&Sort=DateDesc&Maxrecords=10&FORMAT=html" scrolling="yes" width=85% height=500 frameborder="5" class="respviz"></iframe> -->
-
-
 
 </body>
 
