--- a/index.html
+++ b/index.html
@@ -68,19 +68,24 @@
 
             <div class="large-6 medium-6 cell">
                 <div id="wrapper" class="card">
+                    <div class="card-divider">
+                        Trending Searches
+                    </div>
                     <!-- Trending searches Table -->
-                    <table class="table table-bordered table-hover">
-                        <!-- thead-light does not appear to be working -->
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Trending Searches</th>
-                            </tr>
-                        </thead>
-                        <tbody id="trending">
-                            <!-- Rows will go here. Eventually. -->
-                        </tbody>
-                    </table>
-                    <!-- End of Table -->
+                    <div class="card-section">
+                        <table class="table table-bordered table-hover">
+                            <!-- thead-light does not appear to be working -->
+                            <!-- <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Trending Searches</th>
+                                </tr>
+                            </thead> -->
+                            <tbody id="trending">
+                                <!-- Rows will go here. Eventually. -->
+                            </tbody>
+                        </table>
+                        <!-- End of Table -->
+                    </div>
                 </div>
             </div>
             <!--end of wrapper-->
