--- a/index.html
+++ b/index.html
@@ -92,30 +92,31 @@
         </div>
         <!-- end of top container-->
 
+        <div class="grid-x grid-padding-x">
+            <div class="large-6 medium-6 cell" id="right" style="width: 50%;">
 
-        <div class="grid-container" id="right">
-
-            <div class="row">
-                <div class="col-6">
-                    <div id="results">
+                <div class="">
+                    <div class="col-6">
+                        <div id="results">
+                        </div>
                     </div>
                 </div>
+
             </div>
+            <!-- end of container-->
 
-        </div>
-        <!-- end of container-->
+            <div class="large-6 medium-6 cell" id="twit" style="width: 50%;">
 
-        <div class="grid-container" id="twit">
-
-            <div class="row">
-                <div class="col-6">
-                    <div id="tweets">
+                <div class="">
+                    <div class="col-6">
+                        <div id="tweets">
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        </div>
+            </div>
         <!-- end of container-->
+        </div>
 
 
     </div>
