--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
+<!DOCTYPE html>
 
+<html lang="en-us">
+
+<head>
+
+    <meta charset="UTF-8">
+    <title>Global Events Tracker</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+
+    <script src="assets/javascript/project.js"></script>
+
+
+
+    <!-- <iframe id="myFrame" src="https://api.gdeltproject.org/api/v2/geo/geo?query=trump&mode=country"></iframe> -->
+
+</head>
+
+<body>
+
+    <div class="grid-container">
+        <!-- Page header -->
+        <div class="callout large primary">
+            <div class="row column text-center">
+                <h1>Global Events Tracker</h1>
+            </div>
+        </div>
+
+        <div class="grid-x grid-padding-x">
+
+            <!-- Sign-Up details-->
+            <div class="large-6 medium-6 cell">
+                <div class="card">
+                    <div class="card-divider">
+                        <h3>Events Search</h3>
+                    </div>
+                    <div class="card-section">
+
+                        <!-- Sign-up Form (note the various input "types")-->
+                        <form role="form">
+                            <div class="form-group row">
+                                <label for="search-input">Search Input:</label>
+                                <input class="form-control" id="search-input" type="text" placeholder="Search">
+                            </div>
+                            <p>
+                                <button class="button expanded primary" id="search-data" type="submit">Submit</button>
+                            </p>
+                            <p id="alert"></p>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+
+            <div class="large-6 medium-6 cell">
+                <div  class="card">
+                    <div class="card-divider">
+                        Trending Searches
+                    </div>
+                    <!-- Trending searches Table -->
+                    <div id="wrapper" class="card-section">
+                        <table class="table table-bordered table-hover">
+                            <!-- thead-light does not appear to be working -->
+                            <!-- <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Trending Searches</th>
+                                </tr>
+                            </thead> -->
+                            <tbody id="trending">
+                                <!-- Rows will go here. Eventually. -->
+                            </tbody>
+                        </table>
+                        <!-- End of Table -->
+                    </div>
+                </div>
+            </div>
+            <!--end of wrapper-->
+        </div>
+        <!-- end of top container-->
+
+        <div class="grid-x grid-padding-x">
+            <div class="large-6 medium-6 cell" id="right" style="width: 50%;">
+
+                <div class="">
+                    <div class="col-6">
+                        <div id="results">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end of container-->
+
+            <div class="large-6 medium-6 cell" id="twit" style="width: 50%;">
+
+                <div class="">
+                    <div class="col-6">
+                        <div id="tweets">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        <!-- end of container-->
+        </div>
+
+
+    </div>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+
+</body>
+
+</html>
