the glean changed title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Global Events Tracker</title>
+    <title>GLEAN</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -33,7 +33,7 @@
         <!-- Page header -->
         <div class="callout large primary">
             <div class="row column text-center">
-                <h1>Global Events Tracker</h1>
+                <h1>The GLEAN</h1>
             </div>
         </div>
 
